--- a/Asg 1/Assignment 1_On Yat Ka (220103339).ipynb
+++ b/Asg 1/Assignment 1_On Yat Ka (220103339).ipynb
@@ -623,6 +623,158 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 356,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Product</th>\n",
+       "      <th>Region</th>\n",
+       "      <th>Price</th>\n",
+       "      <th>Units Sold</th>\n",
+       "      <th>Sale Date</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>798</td>\n",
+       "      <td>798</td>\n",
+       "      <td>713.000000</td>\n",
+       "      <td>721.000000</td>\n",
+       "      <td>798</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>unique</th>\n",
+       "      <td>50</td>\n",
+       "      <td>10</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>798</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>top</th>\n",
+       "      <td>Product_5</td>\n",
+       "      <td>Region_9</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2022-01-03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>freq</th>\n",
+       "      <td>28</td>\n",
+       "      <td>95</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>97.038317</td>\n",
+       "      <td>10.108183</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>88.083512</td>\n",
+       "      <td>3.241990</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.200000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>28.450000</td>\n",
+       "      <td>8.000000</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>74.270000</td>\n",
+       "      <td>10.000000</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>134.580000</td>\n",
+       "      <td>12.000000</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>460.200000</td>\n",
+       "      <td>22.000000</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          Product    Region       Price  Units Sold   Sale Date\n",
+       "count         798       798  713.000000  721.000000         798\n",
+       "unique         50        10         NaN         NaN         798\n",
+       "top     Product_5  Region_9         NaN         NaN  2022-01-03\n",
+       "freq           28        95         NaN         NaN           1\n",
+       "mean          NaN       NaN   97.038317   10.108183         NaN\n",
+       "std           NaN       NaN   88.083512    3.241990         NaN\n",
+       "min           NaN       NaN    0.200000    2.000000         NaN\n",
+       "25%           NaN       NaN   28.450000    8.000000         NaN\n",
+       "50%           NaN       NaN   74.270000   10.000000         NaN\n",
+       "75%           NaN       NaN  134.580000   12.000000         NaN\n",
+       "max           NaN       NaN  460.200000   22.000000         NaN"
+      ]
+     },
+     "execution_count": 356,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "testing1 = df_clean_ProductRegion.drop(df_clean_ProductRegion[df_clean_ProductRegion['Price'] > outlier_price].index)\n",
+    "\n",
+    "testing1.describe(include = 'all')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 352,
    "metadata": {},
    "outputs": [
