--- a/Asg 1/Assignment 1_On Yat Ka (220103339).ipynb
+++ b/Asg 1/Assignment 1_On Yat Ka (220103339).ipynb
@@ -15,11 +15,16 @@
    "metadata": {},
    "source": [
     "### 1) What conclusions can you draw about sales performance of various products and regions?\n",
-    "<p> For Product, the best selling product is Product_5 and worst selling product is Product_3. The top 10 best selling products are 'Product_50', 'Product_30', 'Product_2', 'Product_48', 'Product_16', 'Product_40', 'Product_29', 'Product_19', 'Product_4', 'Product_13', list in descending order. Can refer to part 2.1</p>\n",
-    "<p> For Region, Region_9 is having the best performance, while Region_7 is having the worst. The sales performance is in the following order : 'Region_9', 'Region_8', 'Region_4', 'Region_10', 'Region_5', 'Region_2', 'Region_3', 'Region_6', 'Region_1', 'Region_7'. Can refer to part 2.2 </p>\n",
+    "<p> For Product, the best selling product is Product_5 and worst selling product is Product_3. The top 10 best selling products are 'Product_50', 'Product_30', 'Product_2', 'Product_48', 'Product_16', 'Product_40', 'Product_29', 'Product_19', 'Product_4', 'Product_13', list in descending order. Can refer to part 2.2</p>\n",
+    "<p> For Region, Region_9 is having the best performance, while Region_7 is having the worst. The sales performance is in the following order : 'Region_9', 'Region_8', 'Region_4', 'Region_10', 'Region_5', 'Region_2', 'Region_3', 'Region_6', 'Region_1', 'Region_7'. Can refer to part 2.3 </p>\n",
     "  \n",
     "### 2) What recommendations do you have for the business?\n",
-    "### 3) Describe your data cleaning approach. How and why did you decide on which cleaning techniques to use?"
+    "<p> 1. I would recommend the business to </p>\n",
+    "\n",
+    "### 3) Describe your data cleaning approach. How and why did you decide on which cleaning techniques to use?\n",
+    "<p> 1. Drop all the duplicated rows and missing value: I used drop_duplicates() to drop the duplicated rows, since each rows means one transaction, it is impossible for the same transaction to happen with same price, units sold on the same date. For missing value, I drop the rows with missing value in Product and Units Sold column. Since we need to analyze the sales performance of products and price. For further explaination and codes, please refer to part (1.1) </p>\n",
+    "<p> 2. Remove outliers: I used drop() to drop the outliers for the price rows but not for the unit sold row, as the price row is having a larger variation in data. For further explaination and codes, please refer to part (1.2) </p>\n",
+    "<p> 3.  Fill Null value for Price and Unit sold columns: I used fillna() to fill all the missing value in price and units sold column with the means. Since I don't need to drop the rows and this method can retain the overall distribution of the data and preserve the mean. For further explaination and codes, please refer to part (1.3) </p>"
    ]
   },
   {
@@ -1001,7 +1006,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Performance Analysis (1.1): Creation of 'Revenue' Column"
+    "# Performance Analysis (2.1): Creation of 'Revenue' Column"
    ]
   },
   {
@@ -1172,7 +1177,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Performance Analysis (2.1): Analyse Product Performance"
+    "# Performance Analysis (2.2): Analyse Product Performance"
    ]
   },
   {
@@ -1417,7 +1422,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Performance Analysis (2.2): Analyse Regional Performance"
+    "# Performance Analysis (2.3): Analyse Regional Performance"
    ]
   },
   {
