--- a/Asg 1/Assignment 1_On Yat Ka (220103339).ipynb
+++ b/Asg 1/Assignment 1_On Yat Ka (220103339).ipynb
@@ -19,7 +19,9 @@
     "<p> For Region, Region_9 is having the best performance, while Region_7 is having the worst. The sales performance is in the following order : 'Region_9', 'Region_8', 'Region_4', 'Region_10', 'Region_5', 'Region_2', 'Region_3', 'Region_6', 'Region_1', 'Region_7'. Can refer to part 2.3 </p>\n",
     "  \n",
     "### 2) What recommendations do you have for the business?\n",
-    "<p> 1. I would recommend the business to </p>\n",
+    "<p> 1. Focus more on promoting the top 10 best sale products like having some maketing event for them.</p>\n",
+    "<p> 2. Investigate the business strategy of Region 9, to find out the reason of their outstanding performance. Besides, it can also invite the management team of Region 9 to share their experience. See if other region can learn from their experience. </p>\n",
+    "<p> 3. Stablize the price for all the products, as mentioned in part 3, the price for the products are having a large variation. </p>\n",
     "\n",
     "### 3) Describe your data cleaning approach. How and why did you decide on which cleaning techniques to use?\n",
     "<p> 1. Drop all the duplicated rows and missing value: I used drop_duplicates() to drop the duplicated rows, since each rows means one transaction, it is impossible for the same transaction to happen with same price, units sold on the same date. For missing value, I drop the rows with missing value in Product and Units Sold column. Since we need to analyze the sales performance of products and price. For further explaination and codes, please refer to part (1.1) </p>\n",
