--- a/Asg 1/assignment1_suggested_solution.ipynb
+++ b/Asg 1/assignment1_suggested_solution.ipynb
@@ -3993,7 +3993,7 @@
     }
    ],
    "source": [
-    "df.groupby('Product').describe().describe()"
+    "df.groupby('Product')[''].describe().describe()"
    ]
   },
   {
